--- a/HtmlLocalizationTests/HtmlLocalizationTests.csproj
+++ b/HtmlLocalizationTests/HtmlLocalizationTests.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="someText.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="someText.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
