--- a/HtmlLocalization/HtmlLocalization.csproj
+++ b/HtmlLocalization/HtmlLocalization.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HtmlLocalizator.cs" />
+    <Compile Include="HtmlLocalized.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
